# ur5_package

./: README.md  package.xml
scripts/: ur5_ctrl.py
universal_robot/ur5_gripper_moveit_config/config/: ur5.srdf
universal_robot/ur5_gripper_moveit_config/launch/: demo_gazebo.launch  gazebo copy.launch  gazebo.launch  ros_controllers.launch
ur5/ur5_description/config/: gazebo_ros_control_params.yaml
ur5/ur5_description/urdf/: ur5_robotiq85_gripper.urdf copy.xacro  ur5_robotiq85_gripper.urdf.xacro
ur5/ur5_gazebo/controller/: ur5gripper_controllers copy.yaml  ur5gripper_controllers.yaml
ur5/ur5_gazebo/launch/: ur5_controllers.launch
ur5_motion_planning/scripts/: ur5_moveit_gazebo_env.py
ur5_robotiq85_moveit_config/: CMakeLists.txt  package.xml
ur5_robotiq85_moveit_config/config/: robotiq_85_gripper.urdf.xacro  ur5_robotiq85_gripper.urdf.xacro
ur5_robotiq85_moveit_config/launch/: gazebo.launch
ur5_robotiq85_moveit_config/worlds/: demo_table_cabinet.world  table_base.world  table_cabinet_base.world  table_small_cabinet_base.world
