<?xml version="1.0"?>
<package format="2">
  <name>ur5_robotiq85_moveit_config</name>
  <version>0.0.0</version>
  <description>The ur5_robotiq85_moveit_config package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sgt79911030@gmail.com">Junting Chen</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
  
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robotiq_desciption</exec_depend>
  <exec_depend>robotiq_gazebo</exec_depend>
  <exec_depend>ur5_description</exec_depend>
  <exec_depend>ur5_gazebo</exec_depend>
  <exec_depend>ur5_gripper_moveit_config</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
